--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <meta charset="utf-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>Pablo Bravo Mediavilla</title>
     <meta name="MobileOptimized" content="width"/>
     <meta name="HandheldFriendly" content="true"/>
@@ -34,7 +34,7 @@
 					</div>
 					<div class="menu-button">
 						<div class="text">
-							<p class="close">Menú</p>
+							<p class="close">MenÃº</p>
 							<p class="open">Cerrar</p>
 						</div>
 						<div class="button"><span class="lines"></span></div>
@@ -51,7 +51,7 @@
 				</div>
 			</div>
         </nav>
-    <!-- Información complementaria -->
+    <!-- InformaciÃ³n complementaria -->
 
     <!-- Pie del documento -->
     <footer id="fot">
