--- a/experience.html
+++ b/experience.html
@@ -3,7 +3,7 @@
 <html lang="es">
     <!-- HEAD -->
 <head>
-    <meta charset="utf-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>Pablo Bravo Mediavilla</title>
     <meta name="MobileOptimized" content="width"/>
     <meta name="HandheldFriendly" content="true"/>
@@ -73,7 +73,7 @@
 		    <ol>
 	            <li>I can program with: 
 	            	<ul>
-		        		<li>javascript</li><img src="img/JavaScriptIcon.png">
+		        		<li>javascript</li><img src="images/JavaScriptIcon.png">
 		        		<li>html5</li>
 		        		<li>xml</li>
 		        		<li>css3</li>
@@ -95,6 +95,7 @@
 	            </li>
 		    </ol>
 			<p>Curso de desarrollo de aplicaciones para Android.</p>
+			<p>Curso OSGI</p>
 
 			<h2>MY CONGRESS</h2>
 		    <ol>
