--- a/index.html
+++ b/index.html
@@ -44,10 +44,9 @@
 				<div class="menu">
 					<div class="wrapper-menu">
 						<a class="item" href="hobbies.html">HOBBIES</a>
-						<a class="item" href="pet.html">PET</a>
-						<a class="item" href="experience.html">CAREER</a>
-						<a class="item" href="contact.html">CONTACT</a>
-						<a class="item" href="oldweb/index.html">OLD WEB</a>
+						<a class="item" href="experience.html">EXPERIENCIA</a>
+						<a class="item" href="contact.html">CONTACTO</a>
+						<a class="item" href="oldweb/index.html">WEB ANTIGUA</a>
 					</div>
 				</div>
 			</div>
