--- a/experience.html
+++ b/experience.html
@@ -60,7 +60,7 @@
 				<li id="hobbies"><a href="hobbies.html">HOBBIES</a></li>
 				<li id="experience"><a href="experience.html">CURRICULUM</a></li>
 				<li id="contact"><a href="contact.html">CONTACTO</a></li>
-				<li id="pet"><a class="item" href="oldweb/index.html">WEB
+				<li id="pet"><a href="oldweb/index.html">WEB
 						ANTIGUA</a></li>
 			</ul>
 		</div>
