--- a/experience.html
+++ b/experience.html
@@ -56,9 +56,8 @@
 		</header>
 		<div class="fondomenu">
 			<ul class="navegacion">
-				<li id="home"><a href="index.html">INICIO</a></li>
 				<li id="hobbies"><a href="hobbies.html">HOBBIES</a></li>
-				<li id="experience"><a href="experience.html">CURRICULUM</a></li>
+				<li id="experience"><a href="experience.html">EXPERIENCIA</a></li>
 				<li id="contact"><a href="contact.html">CONTACTO</a></li>
 				<li id="pet"><a href="oldweb/index.html">WEB
 						ANTIGUA</a></li>
