--- a/experience.html
+++ b/experience.html
@@ -160,6 +160,9 @@
 					target="_blank">canal de youtube</a> en el cual explicábamos
 					diferentes trucos de magia
 				</li>
+				<li>Construcción de la web <a href="http://arquisoft.github.io/Trivial3a/"
+					target="_blank">del juego "trivial"</a>, realizada para presentar un trabajo
+				</li>
 				<li>Construcción de la web de <a href="http://www.ovisala.com/"
 					target="_blank">OVIsala</a>, una liga de fútbol sala de la ciudad
 					de Oviedo
