--- a/index.html
+++ b/index.html
@@ -1,240 +1,248 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Pablo Bravo Mediavilla</title>
-    <meta name="MobileOptimized" content="width"/>
-    <meta name="HandheldFriendly" content="true"/>
-    <meta name="robots" content="all"/>
-    <meta content="Pablo Bravo Mediavilla" name="author" />
-    <meta content="" name="description" />
-    <meta content="landing page profesional para facebook, landing page para facebook gratis, landing page, web responsive design, web html5" name="keywords" >
-    <link rel="stylesheet" href="stylesheets/estilo.css" type="text/css" />
-	<link rel="stylesheet" type="text/css" href="stylesheets/animate.css" />
-    <link rel="shortcut icon" href="images/favicon.ico" /> 
-  	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-	<script type="text/javascript" src="javascripts/javascript.js"></script>
-  </head>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<title>Pablo Bravo Mediavilla</title>
+<meta name="MobileOptimized" content="width" />
+<meta name="HandheldFriendly" content="true" />
+<meta name="robots" content="all" />
+<meta content="Pablo Bravo Mediavilla" name="author" />
+<meta content="" name="description" />
+<meta
+	content="landing page profesional para facebook, landing page para facebook gratis, landing page, web responsive design, web html5"
+	name="keywords">
+<link rel="stylesheet" href="stylesheets/estilo.css" type="text/css" />
+<link rel="stylesheet" type="text/css" href="stylesheets/animate.css" />
+<link rel="shortcut icon" href="images/favicon.ico" />
+<script type="text/javascript"
+	src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+<script type="text/javascript" src="javascripts/javascript.js"></script>
+</head>
 
-  <body>
-
-   <!-- Cabecera del documento 
-	<img id="pablo" src="images/puerta1.png" width="50%" height="100%"/> 
-	<img id="bravo" src="images/puerta2.png" width="50%" height="100%"/> -->
+<body>
 	<header>
-			<A name="inicio"></A>
-			<nav>
-				<div class="background"></div>
-				<div class="wrapper-nav">
-					<header class="responsive">
-						<div class="cabecera">
-							<!--<a class="logopb" href="index.html"><img class="pb" src="images/pbravo.gif"></a>-->
-							<div id="movernombre"><h1 class="nombre">pablo bravo mediavilla</h1></div>
-							<div id="logo"><p class="b">P</p><p class="p">P</p></div>
-							<h1 class="animated bounceInDown">
-								
-							</h1>
+		<nav>
+			<div id="inicio"></div>
+			<div class="background"></div>
+			<div class="wrapper-nav">
+				<div class="responsive">
+					<div class="cabecera">
+						<div id="movernombre">
+							<h1 class="nombre">pablo bravo mediavilla</h1>
 						</div>
-						<div class="menu-button">
-							<div class="button"><span class="lines"></span></div>
+						<div id="logo">
+							<p class="b">P</p>
+							<p class="p">P</p>
 						</div>
-						<div class="clearboth"></div>
-					</header>
-					<div class="menu">
-						<ul id="navigationMenu">
-							<li>
-								<a class="home" href="#inicio">
-									<span>Inicio</span>
-								</a>
-							</li>
+					</div>
+					<div class="menu-button">
+						<div class="button">
+							<span class="lines"></span>
+						</div>
+					</div>
+					<div class="clearboth"></div>
+				</div>
+				<div class="menu">
+					<ul id="navigationMenu">
+						<li><a class="home" href="#inicio"> <span>Inicio</span>
+						</a></li>
 
-							<li>
-								<a class="about" href="#estudios">
-									<span>Experiencia</span>
-								</a>
-							</li>
+						<li><a class="about" href="#estudios"> <span>Experiencia</span>
+						</a></li>
 
-							<li>
-								 <a class="services" href="#sobremi">
-									<span>Sobre mi</span>
-								 </a>
-							</li>
+						<li><a class="services" href="#sobremi"> <span>Sobre
+									mi</span>
+						</a></li>
 
-							<li>
-								<a class="portfolio" href="https://www.facebook.com/pablo.bravomediavilla" target="_blank">
-									<span>Facebook</span>
-								</a>
-							</li>
+						<li><a class="portfolio"
+							href="https://www.facebook.com/pablo.bravomediavilla"
+							target="_blank"> <span>Facebook</span>
+						</a></li>
 
-							<li>
-								<a class="contact" href="#contacto">
-									<span>Contacto</span>
-								</a>
-							</li>
-						</ul>
+						<li><a class="contact" href="#contacto"> <span>Contacto</span>
+						</a></li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+	</header>
+	<span class="ir-arriba"></span>
+
+	<section>
+		<div class="texto">
+			<div class="txt1">
+				<h1 id="estudios">ESTUDIOS</h1>
+				<p>Cuarto curso en la universidad de ingeniería informática de
+					Oviedo</p>
+				<p>Estudio de bachillerato en el IES Pérez de Ayala</p>
+				<p>Primaria y secundaria en el colegio Amor Misericordioso
+					(Oviedo/Asturias)</p>
+			</div>
+			<br> <br>
+			<div class="texto2">
+
+				<br>
+				<div class="txt2">
+					<IMG SRC="images/lenguajes.png" WIDTH=180 HEIGHT=110
+						ALT="Lenguajes programación" /><br>
+					<h1>LENGUAJES DE PROGRAMACIÓN</h1>
+					<br>
+					<ol>
+						<li><b>Experiencia en los siguientes lenguajes:</b>
+							<ul>
+								<li>javascript</li>
+								<li>html5</li>
+								<li>xml</li>
+								<li>css3</li>
+								<li>java</li>
+								<li>Python</li>
+								<li>C#</li>
+								<li>C</li>
+								<li>C++</li>
+								<li>Processing</li>
+								<li>Processing</li>
+							</ul></li>
+						<li><b>Bases de datos dominadas:</b>
+							<ul>
+								<li>mysql</li>
+								<li>sql (jdbc)</li>
+								<li>eXist</li>
+								<li>Neo4j</li>
+							</ul></li>
+					</ol>
+				</div>
+				<div class="txt3">
+					<h1>CURSOS</h1>
+					<br> <IMG SRC="images/android.png" WIDTH=100 HEIGHT=100
+						ALT="Android" />
+					<p>Curso de desarrollo de aplicaciones para Android</p>
+					<br> <IMG SRC="images/photoshop.png" WIDTH=100 HEIGHT=100
+						ALT="Photoshop" /><br>
+					<p>Curso de Photoshop CS</p>
+					<p>Algunos trabajos hechos con photoshop</p>
+					<div class="izq">
+						<IMG class="album" SRC="images/album.jpg" ALT="Album sd colloto" />
+						<IMG class="album" SRC="images/cartelovisala.jpg"
+							ALT="Cartel ovisala" /> <IMG class="cabecera"
+							SRC="images/cabecera.png" ALT="Cabecera magia y florituras" />
+					</div>
+					<div class="der">
+						<IMG class="cartel" SRC="images/cartel.png"
+							ALT="Cartel sd colloto" /> <IMG class="cartel"
+							SRC="images/cesta.jpg" ALT="Cesta sd colloto" /> <IMG
+							class="cartel" SRC="images/logoovisala.png" ALT="Logo ovisala" />
 					</div>
 				</div>
-			</nav>
-		</header>
-		<span class="ir-arriba"><div class="flecha1"></div></span>
-		
-		<section>
-			<div class="texto">
-		<div class="txt1">
-			<h1 id="estudios">ESTUDIOS</h1>
-			<p>Cuarto curso en la universidad de ingeniería informática de
-				Oviedo</p>
-			<p>Estudio de bachillerato en el IES Pérez de Ayala</p>
-			<p>Primaria y secundaria en el colegio Amor Misericordioso
-				(Oviedo/Asturias)</p>
-		</div>
-		<br> <br>
-		<div class="texto2">
+
+			</div>
+
 
 			<br>
-			<div class="txt2">
-				<IMG SRC="images/lenguajes.png" WIDTH=180 HEIGHT=110
-					ALT="Lenguajes programación"></img><br>
-				<h1>LENGUAJES DE PROGRAMACIÓN</h1>
+			<div class="txt5">
+				<h1>CONGRESOS</h1>
 				<br>
 				<ol>
-					<li><b>Experiencia en los siguientes lenguajes:</b>
-						<ul>
-							<li>javascript</li>
-							<li>html5</li>
-							<li>xml</li>
-							<li>css3</li>
-							<li>java</li>
-							<li>Python</li>
-							<li>C#</li>
-							<li>C</li>
-							<li>C++</li>
-							<li>Processing</li>
-							<li>Processing</li>
-						</ul></li>
-					<li><b>Bases de datos dominadas:</b>
-						<ul>
-							<li>mysql</li>
-							<li>sql (jdbc)</li>
-							<li>eXist</li>
-							<li>Neo4j</li>
-						</ul></li>
+					<li>Tercer congreso estatal ritsi de estudiantes de
+						ingenierías en informática.</li>
+
+					<li>Cuarto congreso estatal ritsi de estudiantes de
+						ingenierías en informática.</li>
 				</ol>
 			</div>
-			<div class="txt3">
-				<h1>CURSOS</h1>
+			<br> <IMG class="trabajo" SRC="images/trabajo.jpg"
+				ALT="Partido Benjamín Sd Colloto" />
+
+			<div class="txt12">
+				<h4>COMPROMISO</h4>
 				<br>
-				<IMG SRC="images/android.png" WIDTH=100 HEIGHT=100 ALT="Android"></img>
-				<p>Curso de desarrollo de aplicaciones para Android</p>
-				<br> <IMG SRC="images/photoshop.png" WIDTH=100 HEIGHT=100
-					ALT="Photoshop"></img><br>
-				<p>Curso de Photoshop CS</p>
-				<p>Algunos trabajos hechos con photoshop</p>
-				<div class="izq">
-					<IMG class="album" SRC="images/album.jpg" ALT="Album sd colloto"></img>
-					<IMG class="album" SRC="images/cartel ovisala.jpg"
-						ALT="Cartel ovisala"></img> <IMG class="cabecera"
-						SRC="images/cabecera.png" ALT="Cabecera magia y florituras"></img>
-				</div>
-				<div class="der">
-					<IMG class="cartel" SRC="images/cartel.png" ALT="Cartel sd colloto"></img>
-					<IMG class="cartel" SRC="images/cesta.jpg" ALT="Cesta sd colloto"></img>
-					<IMG class="cartel" SRC="images/logoovisala.png" ALT="Logo ovisala"></img>
-				</div>
+				<h1>Algunos trabajos</h1>
+				<ol>
+					<li class="magia"><h2>Magia y florituras</h2>
+						<div class="sombra"></div>
+						<p>
+							Construcción de la web de <a
+								href="http://www.magiayflorituras.es/" target="_blank">magia
+								y florituras</a>, participando en el <a
+								href="http://www.youtube.com/channel/UCuzm5wffM8t-grR0z85FXXA"
+								target="_blank">canal de youtube</a> en el cual explicábamos
+							diferentes trucos de magia
+						</p></li>
+					<li class="trivial"><h2>Trivial</h2>
+						<div class="sombra"></div>
+						<p>
+							Construcción de la web <a
+								href="http://arquisoft.github.io/Trivial3a/" target="_blank">del
+								juego "trivial"</a>, realizada para la presentación de un trabajo
+							sobre arquitectura del software
+						</p></li>
+					<li class="webovisala"><h2>OVIsala</h2>
+						<div class="sombra"></div>
+						<p>
+							Construcción de la web de <a href="http://www.ovisala.com/"
+								target="_blank">OVIsala</a>, una liga de fútbol sala de la
+							ciudad de Oviedo
+						</p></li>
+					<li class="entrenador"><h2>Entrenador</h2>
+						<div class="sombra"></div>
+						<p>Dos años trabajando como entrenador de la S.D. Colloto en
+							la categoría de benjamín y uno en la categoría alevín</p></li>
+					<li class="monitor"><h2>Monitor</h2>
+						<div class="sombra"></div>
+						<p>Monitor en el campus de la S.D. Colloto</p></li>
+				</ol>
 			</div>
-
 		</div>
+	</section>
+
+	<section id="sobremi">
+		<IMG class="trabajo" SRC="images/sobremi.jpg"
+			ALT="Senda del oso en bicicleta" />
+		<h1>Hobbies</h1>
+
+		<article class="fotos">
+			<h2 id="esqui">Esquiar</h2>
+			<img id="nieve" src="images/nieve1.jpg" alt="nieve" />
+		</article>
+
+		<article class="fotos">
+			<h2 id="futbol">Fútbol</h2>
+			<img id="jugando" src="images/fut2.jpg" alt="futbol" />
+		</article>
+
+		<article class="fotos">
+			<h2 id="golf">Golf</h2>
+			<img id="golfista" src="images/golf1.jpg" alt="golf" />
+		</article>
+
+		<article class="fotos">
+			<h2 id="pintar">Dibujar</h2>
+			<img id="pintando" src="images/dib6.jpg" alt="dibujo" />
+		</article>
+
+		<article class="fotos">
+			<h2 id="padel">Padel</h2>
+			<img id="imgpadel" src="images/padel.jpg" alt="padel" />
+		</article>
+
+		<article class="fotos">
+			<h2 id="surf">Surf</h2>
+			<img id="imgsurf" src="images/surf.jpg" alt="surf" />
+		</article>
+
+		<article class="fotos">
+			<h2 id="rutas">Rutas</h2>
+			<img id="imgrutas" src="images/rutas.jpg" alt="rutas" />
+		</article>
+
+	</section>
 
 
-		<br>
-		<div class="txt5">
-			<h1>CONGRESOS</h1>
-			<br>
-			<ol>
-				<li>Tercer congreso estatal ritsi de estudiantes de ingenierías
-					en informática.</li>
-
-				<li>Cuarto congreso estatal ritsi de estudiantes de ingenierías
-					en informática.</li>
-			</ol>
+	<footer id="contacto">
+		<div class="txt4">
+			<p>Página web realizada por Pablo Bravo Mediavilla</p>
+			<p>Contacto: pablobravomediavilla@gmail.com</p>
 		</div>
-		<br>
-		<IMG class="trabajo" SRC="images/trabajo.jpg" ALT="Partido Benjamín Sd Colloto"></img>
-		
-		<div class="txt12">
-			<h4>COMPROMISO</h4>
-			<br>
-			<h1>Algunos trabajos</h1>
-			<ol>
-				<li class="magia"><h2>Magia y florituras</h2><div class="sombra"></div><p>Construcción de la web de <a
-					href="http://www.magiayflorituras.es/" target="_blank">magia y
-						florituras</a>, participando en el <a
-					href="http://www.youtube.com/channel/UCuzm5wffM8t-grR0z85FXXA"
-					target="_blank">canal de youtube</a> en el cual explicábamos
-					diferentes trucos de magia</p>
-				</li>
-				<li class="trivial"><h2>Trivial</h2><div class="sombra"></div><p>Construcción de la web <a href="http://arquisoft.github.io/Trivial3a/"
-					target="_blank">del juego "trivial"</a>, realizada para la presentación de un trabajo sobre arquitectura del software</p>
-				</li>
-				<li class="webovisala"><h2>OVIsala</h2><div class="sombra"></div><p>Construcción de la web de <a href="http://www.ovisala.com/"
-					target="_blank">OVIsala</a>, una liga de fútbol sala de la ciudad
-					de Oviedo</p>
-				</li>
-				<li class="entrenador"><h2>Entrenador</h2><div class="sombra"></div><p>Dos años trabajando como entrenador de la S.D. Colloto en
-					la categoría de benjamín y uno en la categoría alevín</p></li>
-				<li class="monitor"><h2>Monitor</h2><div class="sombra"></div><p>Monitor en el campus de la S.D. Colloto</p></li>
-			</ol>
-		</div>
-		
-		</section>
-		
-		<section id="sobremi">
-			<IMG class="trabajo" SRC="images/sobremi.jpg" ALT="Senda del oso en bicicleta"></img>
-			<h1>Hobbies</h1>
-			
-			<article class="fotos">
-				<h2 id="esqui">Esquiar</h2>
-				<img id="nieve" src="images/nieve1.jpg" alt="nieve"></img>
-			</article>
-			
-			<article class="fotos">
-				<h2 id="futbol">Fútbol</h2>
-				<img id="jugando" src="images/fut2.jpg" alt="futbol"></img>
-			</article>
-			
-			<article class="fotos">
-				<h2 id="golf">Golf</h2>
-				<img id="golfista" src="images/golf1.jpg" alt="golf"></img>
-			</article>
-			
-			<article class="fotos">
-				<h2 id="pintar">Dibujar</h2>
-				<img id="pintando" src="images/dib6.jpg" alt="dibujo"></img>
-			</article>
-			
-			<article class="fotos">
-				<h2 id="padel">Padel</h2>
-				<img id="imgpadel" src="images/padel.jpg" alt="padel"></img>
-			</article>
-			
-			<article class="fotos">
-				<h2 id="surf">Surf</h2>
-				<img id="imgsurf" src="images/surf.jpg" alt="surf"></img>
-			</article>
-			
-			<article class="fotos">
-				<h2 id="rutas">Rutas</h2>
-				<img id="imgrutas" src="images/rutas.jpg" alt="rutas"></img>
-			</article>
-			
-	   </section>
-
-		
-		<footer id="contacto">
-			<div class="txt4"><p>Página web realizada por Pablo Bravo
-			Mediavilla</p>
-			<p>Contacto: pablobravomediavilla@gmail.com</p></div>
-		</footer>
+	</footer>
 </body>
 </html>
