--- a/index.html
+++ b/index.html
@@ -15,9 +15,20 @@
 <link rel="stylesheet" href="stylesheets/estilo.css" type="text/css" />
 <link rel="stylesheet" type="text/css" href="stylesheets/animate.css" />
 <link rel="shortcut icon" href="images/favicon.ico" />
+
 <script type="text/javascript"
 	src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+	
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js" type="text/javascript"></script>
+<script type="text/javascript" src="javascripts/jquery.nicescroll.min.js"></script>
 <script type="text/javascript" src="javascripts/javascript.js"></script>
+
+
+<script>
+  $(document).ready(function() {    
+	$("html").niceScroll({styler:"fb",cursorcolor:"grey",cursorwidth:"8px",cursorborder:"2px solid white" });
+  });
+</script>
 </head>
 
 <body>
@@ -26,7 +37,7 @@
 			<div id="inicio"></div>
 			<div class="background"></div>
 			<div class="wrapper-nav">
-				<div class="responsive"> 
+				<div class="responsive">
 					<div class="cabecera">
 						<div id="movernombre">
 							<h1 class="nombre">pablo bravo mediavilla</h1>
