--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
 <script type="text/javascript"
 	src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
 	
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js" type="text/javascript"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js" type="text/javascript"></script>
 <script type="text/javascript" src="javascripts/jquery.nicescroll.min.js"></script>
 <script type="text/javascript" src="javascripts/javascript.js"></script>
+
+<script src='javascripts/jquery.scrollme.min.js'></script>
+	
 
 
 <script>
@@ -249,10 +252,21 @@
 	</section>
 
 
-	<footer id="contacto">
-		<div class="txt4">
+	<footer class="footer scrollme">
+
+		<div
+			class="footer_block animateme"
+			data-when="enter"
+			data-from="1"
+			data-to="0"
+			data-rotatex="90"
+		>
+
+			<div class="wrapper">
+
 			<p>Página web realizada por Pablo Bravo Mediavilla</p>
 			<p>Contacto: pablobravomediavilla@gmail.com</p>
+		</div>
 		</div>
 	</footer>
 </body>
