--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 	</section>
 
 
-	<footer class="footer scrollme">
+	<footer class="footer scrollme" id="contacto">
 
 		<div
 			class="footer_block animateme"
