--- a/index.html
+++ b/index.html
@@ -115,7 +115,6 @@
 								<li>C</li>
 								<li>C++</li>
 								<li>Processing</li>
-								<li>Processing</li>
 							</ul></li>
 						<li><b>Bases de datos dominadas:</b>
 							<ul>
@@ -204,6 +203,11 @@
 					<li class="monitor"><h2>Monitor</h2>
 						<div class="sombra"></div>
 						<p>Monitor en el campus de la S.D. Colloto</p></li>
+					<li class="introvisual"><h2>Introvisual</h2>
+						<div class="sombra"></div>
+						<p>Prácticas en la empresa de desarrollo y posicionamiento de páginas web 
+						<a href="http://www.introvisual.com/"
+								target="_blank">Introvisual</a></p></li>
 				</ol>
 			</div>
 		</div>
