--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 					<li class="monitor"><h2>Monitor</h2>
 						<div class="sombra"></div>
 						<p>Monitor en el campus de la S.D. Colloto</p></li>
-					<li class="introvisual"><h2>Introvisual</h2>
+					<li class="entrenador"><h2>Introvisual</h2>
 						<div class="sombra"></div>
 						<p>Prácticas en la empresa de desarrollo y posicionamiento de páginas web 
 						<a href="http://www.introvisual.com/"
