--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 						<div class="sombra"></div>
 						<p>Dos años trabajando como entrenador de la S.D. Colloto en
 							la categoría de benjamín y uno en la categoría alevín</p></li>
-					<li class="monitor"><h2>Monitor</h2>
+					<li class="webovisala"><h2>Monitor</h2>
 						<div class="sombra"></div>
 						<p>Monitor en el campus de la S.D. Colloto</p></li>
 					<li class="entrenador"><h2>Introvisual</h2>
